--- a/Training/EventPulseSeries_nonoise/initiative2/analysis/result_analysis_azimuth.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/analysis/result_analysis_azimuth.ipynb
@@ -1726,6 +1726,358 @@
     "\n",
     "snapshot\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1abcb016",
+   "metadata": {},
+   "source": [
+    "# 3. Resource and Time Information (epoch-level)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fdcdfc0",
+   "metadata": {},
+   "source": [
+    "## 3.1 What this file captures\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec5fef11",
+   "metadata": {},
+   "source": [
+    "\n",
+    "`resources_and_time.csv` is written **once per epoch** (at the end of validation, via the callback).  \n",
+    "Each row is a **snapshot at an epoch boundary**, not a continuous measurement.\n",
+    "\n",
+    "**Implications**\n",
+    "- `epoch_duration_min` is a good proxy for *epoch wall time* (train + val).\n",
+    "- `gpu_util_pct` can be **0% even if the GPU was busy earlier** in the epoch (because it is sampled at the end).\n",
+    "- `sys_mem_used_gb` and `cpu_load_pct` reflect **node-level** state and can be influenced by other processes on the same node.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72d07f8b",
+   "metadata": {},
+   "source": [
+    "## 3.2 Quick view and sanity checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9ef4f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_energy_resources_and_time.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d64050f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Shape:\", df_energy_resources_and_time.shape)\n",
+    "print(\"\\nDtypes:\")\n",
+    "print(df_energy_resources_and_time.dtypes)\n",
+    "\n",
+    "print(\"\\nMissing values per column:\")\n",
+    "print(df_energy_resources_and_time.isna().sum())\n",
+    "\n",
+    "elapsed = pd.to_numeric(df_energy_resources_and_time[\"elapsed_min\"], errors=\"coerce\")\n",
+    "print(\"\\nElapsed monotonic increasing:\", elapsed.is_monotonic_increasing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "445b7e68",
+   "metadata": {},
+   "source": [
+    "## 3.3 Timeline: elapsed time and epoch duration\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853196aa",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Two independent ways to estimate epoch duration:\n",
+    "- `epoch_duration_min` (logged)\n",
+    "- `diff(elapsed_min)` (derived)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3a880e7",
+   "metadata": {},
+   "source": [
+    "def _num(col: str):\n",
+    "    \"\"\"Read a numeric column without modifying the original dataframe.\"\"\"\n",
+    "    return pd.to_numeric(df_energy_resources_and_time[col], errors=\"coerce\")\n",
+    "\n",
+    "epoch = _num(\"epoch\")\n",
+    "elapsed = _num(\"elapsed_min\")\n",
+    "epoch_dur_logged = _num(\"epoch_duration_min\")\n",
+    "epoch_dur_from_elapsed = elapsed.diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ac495c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, elapsed, marker=\"o\")\n",
+    "ax.set_title(\"Elapsed Time vs Epoch\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"Elapsed (min)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6a01969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, epoch_dur_logged, marker=\"o\", label=\"epoch_duration_min (logged)\", alpha=0.4)\n",
+    "ax.plot(epoch, epoch_dur_from_elapsed, marker=\"o\", label=\"diff(elapsed_min)\", alpha=0.2)\n",
+    "ax.set_title(\"Epoch Duration vs Epoch\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"Duration (min)\")\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23e2fa13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dur = epoch_dur_logged.dropna()\n",
+    "total_time_min = float(elapsed.dropna().iloc[-1]) if elapsed.notna().any() else np.nan\n",
+    "\n",
+    "print(f\"Total elapsed (min): {total_time_min:.3f}\")\n",
+    "print(\n",
+    "    \"Epoch duration (min) | \"\n",
+    "    f\"mean={dur.mean():.3f}, std={dur.std(ddof=1):.3f}, \"\n",
+    "    f\"min={dur.min():.3f}, max={dur.max():.3f}\"\n",
+    ")\n",
+    "\n",
+    "slow_idx = epoch_dur_logged.nlargest(5).index\n",
+    "df_energy_resources_and_time.loc[slow_idx, [\n",
+    "    \"epoch\", \"epoch_duration_min\", \"cpu_load_pct\", \"gpu_util_pct\",\n",
+    "    \"gpu_mem_used_gb\", \"gpu_mem_util_pct\", \"rss_gb\"\n",
+    "]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2257331",
+   "metadata": {},
+   "source": [
+    "## 3.4 Resource curves (epoch-boundary snapshots)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c690c201",
+   "metadata": {},
+   "source": [
+    "\n",
+    "The following plots help answer:\n",
+    "- **Is the run GPU-bound or input/CPU-bound?**\n",
+    "- **Is GPU memory saturated (batch size too large)?**\n",
+    "- **Is RAM growing (potential leak / caching effect)?**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a5e6829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu = _num(\"cpu_load_pct\")\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, cpu, marker=\"o\")\n",
+    "ax.set_title(\"CPU Load (%) vs Epoch (node-level)\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"CPU Load (%)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57c82101",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpu_util = _num(\"gpu_util_pct\")\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, gpu_util, marker=\"o\")\n",
+    "ax.set_title(\"GPU Utilization (%) vs Epoch (snapshot at epoch end)\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"GPU Util (%)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9ea9488",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpu_mem_used = _num(\"gpu_mem_used_gb\")\n",
+    "gpu_mem_total = _num(\"gpu_mem_total_gb\")\n",
+    "gpu_mem_util = _num(\"gpu_mem_util_pct\")\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, gpu_mem_used, marker=\"o\", label=\"used (GB)\")\n",
+    "ax.plot(epoch, gpu_mem_total, marker=\"o\", label=\"total (GB)\", alpha=0.6)\n",
+    "ax.set_title(\"GPU Memory (GB) vs Epoch\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"GB\")\n",
+    "ax.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, gpu_mem_util, marker=\"o\")\n",
+    "ax.set_title(\"GPU Memory Utilization (%) vs Epoch\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"GPU Mem Util (%)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d060ee03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rss = _num(\"rss_gb\")\n",
+    "sys_mem = _num(\"sys_mem_used_gb\")\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, rss, marker=\"o\")\n",
+    "ax.set_title(\"Process RSS (GB) vs Epoch\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"RSS (GB)\")\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(epoch, sys_mem, marker=\"o\")\n",
+    "ax.set_title(\"System Memory Used (GB) vs Epoch (node-level)\")\n",
+    "ax.set_xlabel(\"Epoch\")\n",
+    "ax.set_ylabel(\"System used (GB)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3447d340",
+   "metadata": {},
+   "source": [
+    "## 3.5 Bottleneck heuristics\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d34c9921",
+   "metadata": {},
+   "source": [
+    "\n",
+    "These are **heuristics**, not proofs—because the metrics are snapshots.  \n",
+    "Still, they help you decide what to tweak (batch size, num_workers, prefetch, etc.).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1698f318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple flags (tunable thresholds)\n",
+    "gpu_idle_mask = _num(\"gpu_util_pct\").fillna(0) < 1.0\n",
+    "cpu_high_mask = _num(\"cpu_load_pct\").fillna(0) > 90.0\n",
+    "slow_mask = epoch_dur_logged >= epoch_dur_logged.quantile(0.90)\n",
+    "\n",
+    "mask = gpu_idle_mask | cpu_high_mask | slow_mask\n",
+    "\n",
+    "cols = [\n",
+    "    \"epoch\", \"epoch_duration_min\",\n",
+    "    \"cpu_load_pct\", \"gpu_util_pct\",\n",
+    "    \"gpu_mem_used_gb\", \"gpu_mem_util_pct\",\n",
+    "    \"rss_gb\", \"sys_mem_used_gb\",\n",
+    "]\n",
+    "df_energy_resources_and_time.loc[mask, cols].sort_values(\"epoch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0230c031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlations with epoch duration (numeric view; does NOT modify df)\n",
+    "metrics = [\n",
+    "    \"cpu_load_pct\", \"gpu_util_pct\",\n",
+    "    \"gpu_mem_used_gb\", \"gpu_mem_util_pct\",\n",
+    "    \"rss_gb\", \"sys_mem_used_gb\",\n",
+    "]\n",
+    "X = pd.concat([epoch_dur_logged.rename(\"epoch_duration_min\")] + [_num(m).rename(m) for m in metrics], axis=1)\n",
+    "corr_to_dur = X.corr(numeric_only=True)[\"epoch_duration_min\"].drop(\"epoch_duration_min\").sort_values(ascending=False)\n",
+    "\n",
+    "print(\"Correlation with epoch_duration_min (higher => tends to increase duration):\")\n",
+    "corr_to_dur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "100b0ee6",
+   "metadata": {},
+   "source": [
+    "## 3.6 How to act on what you see (practical checklist)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3228e19",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**If GPU util is often low while CPU load is high**\n",
+    "- Data pipeline is likely the bottleneck → increase `num_workers`, enable `pin_memory`, `persistent_workers`,\n",
+    "  adjust `prefetch_factor`, consider faster storage / caching, avoid heavy Python transforms per batch.\n",
+    "\n",
+    "**If GPU memory is close to full**\n",
+    "- Reduce `batch_size` (or model size), consider gradient accumulation instead of huge batches.\n",
+    "\n",
+    "**If GPU memory is stable but epoch duration increases**\n",
+    "- Check for CPU/RAM pressure, background jobs on the same node, or increasing dataloader overhead.\n",
+    "\n",
+    "**If process RSS grows steadily**\n",
+    "- Possible memory leak or accumulating caches → inspect dataloader caching, repeated object creation,\n",
+    "  and keep an eye on Python lists that grow across epochs.\n"
+   ]
   }
  ],
  "metadata": {
